// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 kfcIPD"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 klwChc"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 igKCIp"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 klwChc"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 klwChc"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 BApdV"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 cINkTL"
  disabled={false}
  name="text"
/>
`;
